--- a/langues/HTML_Français/notice.html
+++ b/langues/HTML_Français/notice.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <p style="text-align: center"><img src="../images_creapass/logo_3.webp" alt="Logo Creapass" style="border:none; box-shadow:none;">
-        <p>Générateur de mots de passe aléatoires,sûrs et reproductibles</p>
+        <p>Générateur de mots de passe aléatoires,sûrs et reproductibles et sans stockage</p>
     </header>
 
     <h1 style="text-align: center">Notice d'emploi - Creapass</h1>
