--- a/langues/HTML_Espagnol/conseils_ini.html
+++ b/langues/HTML_Espagnol/conseils_ini.html
@@ -4,69 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Consejos para la inicialización</title>
-    <style>
-        /* Réutilisation du même CSS pour une cohérence visuelle */
-        body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            line-height: 1.6;
-            color: #333;
-            max-width: 900px;
-            margin: 0 auto;
-            padding: 20px;
-            background-color: #f9f9f9;
-        }
-
-        .section-card {
-            background-color: #fefefe; /* Blanc légèrement plus chaud */
-            border-radius: 8px; /* Coins légèrement arrondis */
-            box-shadow: 0 2px 8px rgba(0,0,0,0.1); /* Ombre très subtile */
-            padding: 25px;
-            margin: 30px auto;
-            max-width: 850px; /* Largeur optimale pour la lecture */
-            border-left: 4px solid #3498db;
-        }
-
-        
-        h1, h2 {
-            color: #2c3e50;
-            border-bottom: 2px solid #3498db;
-            padding-bottom: 10px;
-        }
-        .warning {
-            color: #e74c3c;
-            background-color: #fdeaea;
-            padding: 15px;
-            border-left: 4px solid #e74c3c;
-            margin: 20px 0;
-            font-weight: bold;
-        }
-        .example {
-            background-color: #f8f9fa;
-            padding: 15px;
-            border-left: 4px solid #95a5a6;
-            margin: 20px 0;
-            /*font-family: monospace;
-            font-size: 15px*/
-        }
-        a {
-            color: #3498db;
-            text-decoration: none;
-        }
-        a:hover {
-            text-decoration: underline;
-        }
-        .footer {
-            text-align: center;
-            margin-top: 40px;
-            padding-top: 20px;
-            border-top: 1px solid #ddd;
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css"/>
 </head>
 <body>
     <h1>Consejos para la inicialización</h1>
 
-    <section class = "section-card">
+    <section class = "card">
         <h2>Identificador</h2>
         <p>El campo «identificador» debe rellenarse <strong>sin espacios</strong>. Puede elegir utilizar :</p>
         <ul>
@@ -77,7 +20,7 @@
         <p class="warning">Este identificador no le será solicitado nunca más, salvo que cambie de ordenador o formatee su disco. Debe recordarlo.</p>
     </section>
 
-    <section class = "section-card">
+    <section class = "card">
         <h2>Su contraseña</h2>
         <p>Cree una contraseña segura utilizando este método:</p>
         
