Refactor HTML and CSS for improved styling and language consistency
- Updated conseils_ini.html with embedded CSS for a cohesive visual design.
- Translated notice.html from Romanian to French, enhancing user accessibility.
- Revised styles.css to standardize note styling across different languages.
- Modified don.html files in English, Spanish, French, and Romanian to improve text clarity and footer consistency.
- Adjusted user_data.json to reflect language changes and updated theme settings.

--- a/active_html/notice.html
+++ b/active_html/notice.html
@@ -1,73 +1,87 @@
 <!DOCTYPE html>
-<html lang="ro">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Instrucțiuni de utilizare - Creapass</title>
-    <link rel="stylesheet" href="styles.css"/>
+    <title>Notice d'emploi - Creapass</title>
+    <link rel="stylesheet" href="styles.css">
+
 </head>
 <body>
-    <header style="background-color: transparent;">
-        <p style="text-align: center"><img src="../images_creapass/logo.webp" alt="Logo Creapass" style="border:none; box-shadow:none;">
-        <p class="note">Generator de parole aleatorii reproducibile și autonom</p>
+    <header>
+        <p style="text-align: center"><img src="../images_creapass/logo_3.webp" alt="Logo Creapass" style="border:none; box-shadow:none;">
+        <p>Générateur de mots de passe aléatoires,sûrs et reproductibles et sans stockage</p>
     </header>
-    <h1>Instrucțiuni de utilizare</h1>
-    <section class = "section-card">
-        <h2>1 - Inițializare</h2>
-        <p>Când porniți Creapass pentru prima dată, veți vedea această fereastră:</p>
-        <p style="text-align: center"><img src="../images_creapass/fig_1.webp" alt="Fereastra de inițializare"/></p>
-        <p class="fig-caption">Figura 1: Fereastra de inițializare</p>
-        <p>Software-ul a fost conceput pentru a fi utilizat fără mouse-ul (este mai ușor și mai rapid, dar mouse-ul rămâne disponibil). Zona activă este înconjurată de un cadru albastru; apăsarea tastei „Enter” validează și trece automat la zona următoare.</p>
-        <p class="warning">ATENȚIE: Identificatorul și parola dvs. sunt salvate sub formă codificată (amprentă digitală). Este <strong>IMPERATIV SĂ VĂ AMINTIȚI</strong> aceste date, deoarece nu pot fi recuperate.</p>
-        <p style="text-align: center"><a href="conseils_ini.html">→ Consultați sfaturile noastre pentru a alege un identificator și o parolă bune ←</a></p>
-        <p id="Lorsque vous avez entré ces données">După introducerea acestor date, fereastra devine:</p>
-        <p style="text-align: center"><img src="../images_creapass/fig_2.webp" alt="Fereastra de validare"/></p>
-        <p class="fig-caption">Figura 2: Validarea inițializării</p>
-    </section>
-    <section class = "section-card">
-        <h2>2 - Utilizare de bază</h2>
-        <p>După inițializare, această fereastră va apărea la pornire:</p>
-        <p style="text-align: center"><img src="../images_creapass/fig_3.webp" alt="Fereastra principală"/></p>
-        <p class="fig-caption">Figura 3: Fereastra principală</p>
-        <p>Trebuie să introduceți parola pentru a accesa funcționalitățile. Apoi:</p>
-        <ol>
-            <li>Selectați sau introduceți un site/aplicație</li>
-            <li>Validați cu Enter</li>
-            <li>Parola generată este copiată automat în clipboard</li>
-        </ol>
-        <p style="text-align: center"><img src="../images_creapass/fig_4.webp" alt="Generare parolă"/></p>
-        <p class="fig-caption">Figura 4: Parolă generată</p>
-    </section>
-    <section class = "section-card">
-        <h2>3 - Mini-interfață</h2>
-        <p>Pentru o utilizare mai discretă, activați mini-interfața prin meniu.<br>Atenție, această opțiune din meniu este accesibilă doar după validarea parolei.</p>
-        <p style="text-align: center"><img src="../images_creapass/fig_5.webp" alt="Activare mini-interfață"/></p>
-        <p class="fig-caption">Figura 5: Activarea mini-interfeței</p>
-        <p>Mini-interfața apare apoi, împreună cu o pictogramă în zona de lângă ceas:<br>Un clic dreapta pe pictogramă afișează un meniu</p>
-        <p style="text-align: center"><img src="../images_creapass/fig_6.webp" alt="Mini-interfață"/></p>
-        <p class="fig-caption">Figura 6: Mini-interfață</p>
-        <p style="text-align: center"><img src="../images_creapass/fig_8.webp" alt="Mini-interfață"/></p>
-        <p class="fig-caption">Figura 8: Pictogramă lângă ceas: 1-repaus, 2-la trecere, 3-la clic dreapta</p>
-        <p>Dacă trebuie să mutați această fereastră, apăsați „Alt+m” pentru a afișa bara tradițională de sistem</p>
-        <p style="text-align: center"><img src="../images_creapass/fig_7.webp" alt="Mini-interfață deplasabilă"/></p>
-        <p class="fig-caption">Figura 6: Mini-interfață deplasabilă</p>
 
-        <p class="note">Sfat: După alegerea site-ului, apăsați Enter pentru a genera o parolă, apoi din nou Enter pentru a șterge și a pregăti o nouă generare.</p>
-        <p>Dacă ați ales să deschideți direct în forma redusă, vi se va cere parola.<br><strong>Atenție,</strong> acest lucru presupune că stăpâniți software-ul și că este modul dvs. obișnuit de lucru; nu veți mai avea acces la opțiunile „limbă” și „temă”</p>
+    <h1 style="text-align: center">Notice d'emploi - Creapass</h1>
+
+    <section class = "card">
+        <h2>1 - Initialisation</h2>
+        <p>Lorsque vous lancez Creapass pour la première fois, vous allez voir cette fenêtre :</p>
+        <p style="text-align: center"><img src="../images_creapass/fig_1.webp" alt="Fenêtre d'initialisation"/></p>
+        <p class="fig-caption">Figure 1 : Fenêtre d'initialisation</p>
+
+        <p>Le logiciel a été conçu pour être utilisé sans la souris (c'est plus facile et plus rapide mais la souris demeure). La zone en service est entourée d'un cadre bleu, l'appui sur la touche « Entrée » valide et passe automatiquement à la zone suivante.</p>
+
+        <p class="warning">ATTENTION : Votre identifiant et votre mot de passe sont enregistrés sous forme codée (empreinte numérique). Il est donc <strong>IMPÉRATIF DE VOUS EN SOUVENIR</strong> car ils ne peuvent pas être récupérés.</p>
+
+        <p style="text-align: center"><a href="conseils_ini.html">→ Consultez nos conseils pour choisir un bon identifiant et mot de passe ←</a></p>
+
+        <p id="Lorsque vous avez entré ces données">Après avoir entré ces données, la fenêtre devient :</p>
+        <p style="text-align: center"><img src="../images_creapass/fig_2.webp" alt="Fenêtre de validation"/></p>
+        <p class="fig-caption">Figure 2 : Validation de l'initialisation</p>
     </section>
-    <section class = "section-card">
-        <h2>Ajutor și scurtături</h2>
+
+    <section class = "card">
+        <h2>2 - Utilisation de départ</h2>
+        <p>Après l'initialisation, cette fenêtre apparaîtra au démarrage :</p>
+        <p style="text-align: center"><img src="../images_creapass/fig_3.webp" alt="Fenêtre principale"/></p>
+        <p class="fig-caption">Figure 3 : Fenêtre principale</p>
+
+        <p>Vous devez saisir votre mot de passe pour accéder aux fonctionnalités. Ensuite :</p>
+        <ol>
+            <li>Sélectionnez ou saisissez un site/application</li>
+            <li>Validez avec Entrée</li>
+            <li>Le mot de passe généré est automatiquement copié dans le presse-papiers</li>
+        </ol>
+
+        <p style="text-align: center"><img src="../images_creapass/fig_4.webp" alt="Génération de mot de passe"/></p>
+        <p class="fig-caption">Figure 4 : Mot de passe généré</p>
+    </section>
+
+    <section class = "card">
+        <h2>3 - Mini-interface</h2>
+        <p>Pour une utilisation plus discrète, activez la mini-interface via le menu.<br>Attention, cette option du menu n'est accessible qu'après validation du mot de passe.</p>
+        <p style="text-align: center"><img src="../images_creapass/fig_5.webp" alt="Activation mini-interface"/></p>
+        <p class="fig-caption">Figure 5 : Activation de la mini-interface</p>
+
+        <p>La mini-interface apparaît alors, ainsi qu'une icône dans la zone à côté de l'horloge :<br>Un clic droit sur l'icône fait apparaître un menu</p>
+        <p style="text-align: center"><img src="../images_creapass/fig_6.webp" alt="Mini-interface"/></p>
+        <p class="fig-caption">Figure 6 : Mini-interface</p>
+        <p style="text-align: center"><img src="../images_creapass/fig_8.webp" alt="Mini-interface"/></p>
+        <p class="fig-caption">Figure 8 : Icône côté horloge : 1-au repos, 2-au survol, 3-au clic droit</p>
+        <p>Si vous devez déplacer cette fenêtre, appuyez sur « Alt-m » pour avoir la traditionnelle barre-système</p>
+        <p style="text-align: center"><img src="../images_creapass/fig_7.webp" alt="Mini-interface déplaçable"/></p>
+        <p class="fig-caption">Figure 6 : Mini-interface déplaçable</p>
+        
+        <p class="note">Astuce : Après choix du site, appuyez sur Entrée pour générer un mot de passe, puis à nouveau Entrée pour effacer et préparer une nouvelle génération.</p>
+        <p>Si vous avez choisi d'ouvrir directement sous la forme réduite, votre mot de passe vous est demandé.<br><strong>Attention,</strong> Ça suppose que vous maîtrisez le logiciel et que c'est votre mode travail courant ; vous n'aurez plus accès aux options « langue » et « thème » sauf à réinitialiser partiellement (alt+s)</p>
+    </section>
+
+    <section class = "card">
+        <h2>Aide et raccourcis</h2>
         <ul>
-            <li><strong>F1</strong>: Ajutor contextual</li>
-            <li><strong>Ctrl+Q</strong>: Închidere aplicație</li>
-            <li><strong>Ctrl+V</strong>: Lipire parola generată</li>
-            <li><strong>Alt+m</strong>: Afișare/ascundere bara de sistem</li>
-            <li><strong>Alt+s</strong>: (disponibil doar în mini-interfață) Revenire la interfața normală</li>
-            <li><strong>Ctrl+Alt+i+i</strong>: (Apăsați de două ori pe „i” cu Ctrl+Alt apăsate) Resetare completă a programului</li>
+            <li><strong>F1</strong> : Aide contextuelle</li>
+            <li><strong>Ctrl+Q</strong> : Quitter l'application</li>
+            <li><strong>Ctrl+V</strong> : Coller le mot de passe généré</li>
+            <li><strong>Alt+m</strong>: Afficher/supprimer la barre système</li>
+            <li><strong>Alt+s</strong>: (disponible uniquement en mini-interface) Revenir à l'interface normale</li>
+            <li><strong>Ctrl+Alt+i+i</strong>: (Tapez 2 fois sur "i" avec Ctrl-Alt enfoncés)  Réinitialiser totalement le programme</li>
         </ul>
     </section>
-    <footer style="text-align: center">
-      Original în franceză, traduceri mistral.ai și/sau deepl.com<br>&copy; Jean Dalbrut – Autorul CréaPass
-    </footer>
+
+      <footer style="text-align: center">
+          Original en français, traductions mistral.ai et/ou deepl.com<br>&copy; Jean Dalbrut – Auteur de CréaPass
+      </footer>
 </body>
 </html>
