--- a/langues/HTML_Anglais/don.html
+++ b/langues/HTML_Anglais/don.html
@@ -10,8 +10,8 @@
     <header style="background-color: transparent;">
         <h1>🙂 Thank you for using the application</h1>
         <p style="text-align: center"><img src="../images_creapass/logo_3.webp" alt="Logo Creapass" style="border:none; box-shadow:none;">
-        <p class="note">You appreciate this application? - I hope it is useful to you daily.</p>
     </header>
+    <p class="note">Do you appreciate this application? - I hope it serves you daily.</p>
     <div class="features">
         <div class="feature">
             <h3>A little help for a big thank you</h3>
@@ -40,8 +40,10 @@
         </div>
     </div>
     <p style="text-align:center"><em>This invitation will not appear every time, only occasionally. Donors will receive a code to remove it permanently (promised, sworn!)</em></p>
-    <div class="footer">
-        <p>Creapass - Secure and reproducible password generator</p>
-    </div>
+    <footer style="text-align: center">
+       Original en français, traductions mistral.ai et/ou deepl.com
+       <br/>
+       © Jean Dalbrut – Auteur de CréaPass
+    </footer>
 </body>
 </html>
