--- a/langues/HTML_Espagnol/don.html
+++ b/langues/HTML_Espagnol/don.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>¿Un café (o una pinta) para el camino?</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header style="background-color: transparent;">
         <h1>🙂 Gracias por usar la aplicación</h1>
         <p style="text-align: center"><img src="../images_creapass/logo_3.webp" alt="Logo Creapass" style="border:none; box-shadow:none;">
-        <p class="note">¿Aprecias esta aplicación? - Espero que te sea útil a diario.</p>
     </header>
+    <p class="note">¿Aprecias esta aplicación? - Espero que te sirva a diario.</p>
     <div class="features">
         <div class="feature">
             <h3>Un pequeño empujón para un gran gracias</h3>
@@ -39,8 +40,10 @@
         </div>
     </div>
     <p style="text-align:center"><em>Esta invitación no aparecerá cada vez, solo de vez en cuando. Los donantes recibirán un código para eliminarla definitivamente (¡prometido, jurado!)</em></p>
-    <div class="footer">
-        <p>Creapass - Generador de contraseñas seguras y reproducibles</p>
-    </div>
+    <footer style="text-align: center">
+       Original en français, traductions mistral.ai et/ou deepl.com
+       <br/>
+       © Jean Dalbrut – Auteur de CréaPass
+    </footer>
 </body>
 </html>
