--- a/langues/HTML_Français/don.html
+++ b/langues/HTML_Français/don.html
@@ -13,9 +13,7 @@
  
     </header>
 
-    <div class="note>
-        <p class="note">Vous appréciez cette application ? - J’espère qu’elle vous rend service au quotidien.</p>
-    </div>
+    <p class="note">Vous appréciez cette application ? - J’espère qu’elle vous rend service au quotidien.</p>
     <div class="features">
         <div class="feature">
             <h3>Un petit coup de pouce pour un grand merci</h3>
@@ -43,8 +41,8 @@
         </div>
     </div>
     <p style="text-align:center"><em>Cette invitation n’apparaîtra pas à chaque fois, seulement de temps en temps. Les donnateurs recevront un code pour la supprimer définitivement (promis, juré !)</em></p>
-    <div class="footer">
-        <p>Creapass - Générateur de mots de passe sécurisés et reproductibles</p>
-    </div>
+    <footer style="text-align: center">
+          Original en français, traductions mistral.ai et/ou deepl.com<br>&copy; Jean Dalbrut – Auteur de CréaPass
+    </footer>
 </body>
 </html>
