--- a/langues/HTML_Roumain/don.html
+++ b/langues/HTML_Roumain/don.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>O cafea (sau o pintă) pentru drum?</title>
-    <link rel="stylesheet" href="../styles.css">
+    <link rel="stylesheet" href="styles.css">
     
 </head>
 <body>
@@ -31,7 +31,7 @@
                 <li>sau o bere pentru buna dispoziție🍺</li>
             </ul>
         
-            <form text-align:center
+            <form style="text-align:center"
                 action="https://www.paypal.com/donate"
                 method="post"
                 target="_top"
@@ -42,8 +42,10 @@
         </div>
     </div>
     <p style="text-align:center"><em>Această invitație nu va apărea de fiecare dată, doar din când în când. Donatorii vor primi un cod pentru a o elimina definitiv (promis, jurat!)</em></p>
-    <div class="footer">
-        <p>Creapass - Generator de parole securizate și reproductibile</p>
-    </div>
+    <footer style="text-align: center">
+       Original en français, traductions mistral.ai et/ou deepl.com
+       <br/>
+       © Jean Dalbrut – Auteur de CréaPass
+    </footer>
 </body>
 </html>
