Mise à jour du logo et refactorisation des sections pour une meilleure cohérence

--- a/langues/HTML_Roumain/notice.html
+++ b/langues/HTML_Roumain/notice.html
@@ -8,11 +8,11 @@
 </head>
 <body>
     <header style="background-color: transparent;">
-        <p style="text-align: center"><img src="../images_creapass/logo.webp" alt="Logo Creapass" style="border:none; box-shadow:none;">
-        <p class="note">Generator de parole aleatorii reproducibile și autonom</p>
+        <p style="text-align: center"><img src="../images_creapass/logo_3.webp" alt="Logo Creapass" style="border:none; box-shadow:none;">
+        <p>Generator de parole aleatorii reproducibile și autonom</p>
     </header>
     <h1>Instrucțiuni de utilizare</h1>
-    <section class = "section-card">
+    <section class = "card">
         <h2>1 - Inițializare</h2>
         <p>Când porniți Creapass pentru prima dată, veți vedea această fereastră:</p>
         <p style="text-align: center"><img src="../images_creapass/fig_1.webp" alt="Fereastra de inițializare"/></p>
@@ -24,7 +24,7 @@
         <p style="text-align: center"><img src="../images_creapass/fig_2.webp" alt="Fereastra de validare"/></p>
         <p class="fig-caption">Figura 2: Validarea inițializării</p>
     </section>
-    <section class = "section-card">
+    <section class = "card">
         <h2>2 - Utilizare de bază</h2>
         <p>După inițializare, această fereastră va apărea la pornire:</p>
         <p style="text-align: center"><img src="../images_creapass/fig_3.webp" alt="Fereastra principală"/></p>
@@ -38,7 +38,7 @@
         <p style="text-align: center"><img src="../images_creapass/fig_4.webp" alt="Generare parolă"/></p>
         <p class="fig-caption">Figura 4: Parolă generată</p>
     </section>
-    <section class = "section-card">
+    <section class = "card">
         <h2>3 - Mini-interfață</h2>
         <p>Pentru o utilizare mai discretă, activați mini-interfața prin meniu.<br>Atenție, această opțiune din meniu este accesibilă doar după validarea parolei.</p>
         <p style="text-align: center"><img src="../images_creapass/fig_5.webp" alt="Activare mini-interfață"/></p>
@@ -55,7 +55,7 @@
         <p class="note">Sfat: După alegerea site-ului, apăsați Enter pentru a genera o parolă, apoi din nou Enter pentru a șterge și a pregăti o nouă generare.</p>
         <p>Dacă ați ales să deschideți direct în forma redusă, vi se va cere parola.<br><strong>Atenție,</strong> acest lucru presupune că stăpâniți software-ul și că este modul dvs. obișnuit de lucru; nu veți mai avea acces la opțiunile „limbă” și „temă”</p>
     </section>
-    <section class = "section-card">
+    <section class = "card">
         <h2>Ajutor și scurtături</h2>
         <ul>
             <li><strong>F1</strong>: Ajutor contextual</li>
