Correction des balises de section pour une meilleure cohérence et mise à jour des styles

--- a/langues/HTML_Anglais/notice.html
+++ b/langues/HTML_Anglais/notice.html
@@ -9,7 +9,7 @@
 <body>
     <header style="background-color: transparent;">
         <p style="text-align: center"><img src="../images_creapass/logo_3.webp" alt="Logo Creapass" style="border:none; box-shadow:none;">
-        <p class="note">Random password generator that is reproducible and standalone</p>
+        <p>Random password generator that is reproducible and standalone</p>
     </header>
 
     <h1 style="text-align: center">User manual</h1>
