--- a/langues/HTML_Espagnol/notice.html
+++ b/langues/HTML_Espagnol/notice.html
@@ -13,7 +13,7 @@
     </header>
     <h1>Manual del usuario</h1>
     
-    <section class = "section-card">
+    <section class = "card">
         <h2>1 - Inicialización</h2>
         <p>Cuando inicie Creapass por primera vez, verá esta ventana:</p>
         <p style="text-align: center"><img src="../images_creapass/fig_1.webp" alt="Fenêtre d'initialisation"/></p>
@@ -30,7 +30,7 @@
         <p class="fig-caption">Figura 2: Validación de la inicialización</p>
     </section>
 
-    <section class = "section-card">
+    <section class = "card">
         <h2>2 - Uso inicial</h2>
         <p>Tras la inicialización, esta ventana aparecerá al arrancar:</p>
         <p style="text-align: center"><img src="../images_creapass/fig_3.webp" alt="Fenêtre principale"/></p>
@@ -47,7 +47,7 @@
         <p class="fig-caption">Figura 4: Contraseña generada</p>
     </section>
 
-    <section class = "section-card">
+    <section class = "card">
         <h2>3 - Mini-interfaz</h2>
         <p>Para un uso más discreto, active la mini-interfaz a través del menú.<br>Tenga en cuenta que sólo se puede acceder a esta opción de menú una vez validada la contraseña.</p>
         <p style="text-align: center"><img src="../images_creapass/fig_5.webp" alt="Activation mini-interface"/></p>
@@ -63,7 +63,7 @@
         <p>Si ha elegido abrir directamente en formato reducido, se le pedirá su contraseña.<br><strong>Atención:</strong> esto supone que domina el programa y que éste es su modo de trabajo actual; ya no tendrá acceso a las opciones «idioma» y «tema».</p>
     </section>
 
-    <section class = "section-card">
+    <section class = "card">
         <h2>Ayuda y accesos directos</h2>
         <ul>
             <li><strong>F1</strong> : Ayuda contextual</li>
